[#1512] Grid > scrollbar issue (#1513)
- adjust: true 일 때 grid width 변경에 delay 가 있다면 grid resize 시 scrollbar 가 매끄럽지 않게 표시되는 현상
- column resize 시 table-body의 style overflow: auto 로 변경
---------

--- a/src/components/grid/style/grid.scss
+++ b/src/components/grid/style/grid.scss
@@ -269,6 +269,10 @@
   max-height: 120px;
   background: none;
 
+  &--used {
+    padding-top: 16px;
+  }
+
   &__hidden-items {
     max-height: 106px;
     overflow-y: auto;
@@ -344,14 +348,8 @@
     }
     &--operator {
       width: 80px;
-      height: 26px !important;
-      .ev-input {
+      :deep(.ev-input) {
         height: 26px !important;
-      }
-      &:hover {
-        cursor: initial;
-        margin: inherit;
-        border: none;
       }
     }
     &.non-display {
